# hand_rotation_estimation_tutorial

./: CMakeLists.txt  README.md
data/: .gitignore  base_rot.mat
script/: generate_dataset.m  hand_poses.m  hand_utils.m  qdist.m  qslerp.m
src/mean_shift/: rchord_meanshift.cpp  rchord_meanshift.hpp
src/padenti/: mh_rtree.hpp
src/particle_filter/: particle_filter.hpp  particle_filter_base.hpp  particle_filter_hand.hpp  particle_filter_hand_likelihood.hpp  particle_filter_hand_prediction.hpp
test/: live_test.cpp  retrofit_rtree.cpp
